Tehtävät/log output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercises
  name: logoutput-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput
  template:
    metadata:
      labels:
        app: logoutput
    spec:
      containers:
        - name: logoutput
          image: jovankarmakka/log:v0.9
          imagePullPolicy: Always
          volumeMounts:
            - name: config-volume
              mountPath: /app/config/information.txt
              subPath: information.txt
      volumes:
        - name: config-volume
          configMap:
            name: logoutput-conmap
            items:
              - key: information.txt
                path: information.txt
