Tehtävät/log output/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: exercises
  name: ingress-ing
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: logoutput-svc
            port:
              number: 2345
      - path: /logoutput
        pathType: Prefix
        backend:
          service:
            name: logoutput-svc
            port:
              number: 2345       
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: pingpong-svc
            port:
              number: 2346
      - path: /pongcount
        pathType: Prefix
        backend:
          service:
            name: pingpong-svc
            port:
              number: 2346
